--- a/_includes/header.html
+++ b/_includes/header.html
@@ -55,6 +55,7 @@
                 <a class="nav-item nav-link" href="{{ 'archive' | relative_url }}">/archive</a>
                 <a class="nav-item nav-link" href="{{ 'tags' | relative_url }}">/tags</a>
                 <a class="nav-item nav-link" href="{{ 'about' | relative_url }}">/about</a>
+                <a class="nav-item nav-link" href="{{ 'images' | relative_url }}">/images</a>
             </div>
         </div>
     </div>
