--- a/_includes/header.html
+++ b/_includes/header.html
@@ -46,11 +46,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-item nav-link" href="{{ '' | relative_url }}/">/home</a>
-                <a class="nav-item nav-link" href="{{ 'archive' | relative_url }}">/archive</a>
-                <a class="nav-item nav-link" href="{{ 'tags' | relative_url }}">/tags</a>
-                <a class="nav-item nav-link" href="{{ 'about' | relative_url }}">/about</a>
-                <a class="nav-item nav-link" href="{{ 'images' | relative_url }}">/images</a>
+                <a class="nav-item nav-link" href="{{ 'Archiv' | relative_url }}">/Archiv</a>
+                <a class="nav-item nav-link" href="{{ 'Tags' | relative_url }}">/Tags</a>
+                <a class="nav-item nav-link" href="{{ 'Über' | relative_url }}">/Über</a>
+                <a class="nav-item nav-link" href="{{ 'Galerie' | relative_url }}">/Galerie</a>
             </div>
         </div>
     </div>
