--- a/_includes/header.html
+++ b/_includes/header.html
@@ -47,7 +47,7 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
                 <a class="nav-item nav-link" href="{{ 'Archiv' | relative_url }}">/Archiv</a>
-                <a class="nav-item nav-link" href="{{ 'Tags' | relative_url }}">/Tags</a>
+                <a class="nav-item nav-link" href="{{ 'tags' | relative_url }}">/Tags</a>
                 <a class="nav-item nav-link" href="{{ 'Über' | relative_url }}">/Über</a>
                 <a class="nav-item nav-link" href="{{ 'Galerie' | relative_url }}">/Galerie</a>
             </div>
