--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,12 +18,33 @@
                       {% endfor %}
                     </ul>
                   </div>
+                  
+                  <div class="PageNavigation">
+                      {% if page.previous.url %}
+                        <a class="prev" href="{{page.previous.url}}">&laquo; {{page.previous.title}}</a>
+                      {% endif %}
+                      {% if page.next.url %}
+                        <a class="next" href="{{page.next.url}}">{{page.next.title}} &raquo;</a>
+                      {% endif %}
+                  </div>
+
+                  
                   <div class="post-content">
                     {% if page.toc %}
                       {% include toc.html html=content class='toc' %}
                     {% endif %}
                     {{ content }}
                   </div>
+                  
+                  <div class="PageNavigation">
+                      {% if page.previous.url %}
+                        <a class="prev" href="{{page.previous.url}}">&laquo; {{page.previous.title}}</a>
+                      {% endif %}
+                      {% if page.next.url %}
+                        <a class="next" href="{{page.next.url}}">{{page.next.title}} &raquo;</a>
+                      {% endif %}
+                  </div>
+                  
                 </div>
               </div>
             </div>
@@ -33,7 +54,8 @@
           </div>
         </div>
       </div>
-      {% include footer.html %}
+      {% include footer.html %}      
     </div>
   </body>
 </html>
+
