--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -439,3 +439,21 @@ table.inner-borders {
   }
 }
 
+.PageNavigation {
+  font-size: 14px;
+  display: block;
+  width: auto;
+  overflow: hidden;
+}
+
+.PageNavigation a {
+  display: block;
+  width: 50%;
+  float: left;
+  margin: 1em 0;
+}
+
+.PageNavigation .next {
+  text-align: right;
+}
+
