--- a/_includes/header.html
+++ b/_includes/header.html
@@ -48,7 +48,7 @@
             <div class="navbar-nav">
                 <a class="nav-item nav-link" href="{{ 'Archiv' | relative_url }}">/Archiv</a>
                 <a class="nav-item nav-link" href="{{ 'tags' | relative_url }}">/Tags</a>
-                <a class="nav-item nav-link" href="{{ 'Über' | relative_url }}">/Über</a>
+                <a class="nav-item nav-link" href="{{ 'ueber' | relative_url }}">/Über</a>
                 <a class="nav-item nav-link" href="{{ 'Galerie' | relative_url }}">/Galerie</a>
             </div>
         </div>
