--- a/_includes/header.html
+++ b/_includes/header.html
@@ -50,6 +50,7 @@
                 <a class="nav-item nav-link" href="{{ 'tags' | relative_url }}">/Tags</a>
                 <a class="nav-item nav-link" href="{{ 'ueber' | relative_url }}">/Über</a>
                 <a class="nav-item nav-link" href="{{ 'Galerie' | relative_url }}">/Galerie</a>
+                <a class="nav-item nav-link" href="{{ 'https://translate.googleusercontent.com/translate_c?depth=1&nv=1&pto=aue&rurl=translate.google.com&sl=auto&sp=nmt4&tl=en&u=https://takuan.de/&usg=ALkJrhjwfZdL2ZcgxscM3UeewLfevtythA'}}">/translate</a>
             </div>
         </div>
     </div>
