--- a/_includes/header.html
+++ b/_includes/header.html
@@ -50,7 +50,15 @@
                 <a class="nav-item nav-link" href="{{ 'tags' | relative_url }}">/Tags</a>
                 <a class="nav-item nav-link" href="{{ 'ueber' | relative_url }}">/Über</a>
                 <a class="nav-item nav-link" href="{{ 'Galerie' | relative_url }}">/Galerie</a>
-                <a class="nav-item nav-link" href="{{ 'https://translate.googleusercontent.com/translate_c?depth=1&nv=1&pto=aue&rurl=translate.google.com&sl=auto&sp=nmt4&tl=en&u=https://takuan.de/&usg=ALkJrhjwfZdL2ZcgxscM3UeewLfevtythA'}}">/translate</a>
+                <div id="google_translate_element"></div>
+
+                    <script type="text/javascript">
+                    function googleTranslateElementInit() {
+                      new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+                    }
+                    </script>
+
+                    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
             </div>
         </div>
     </div>
