--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
 {% include header.html %}
     <div class="wrapper">
       <div class="content">
